fix hr on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -829,7 +829,10 @@ main {
 }
 
 .hr-container hr {
-  border: 2px solid #018b92;
+  border: 4px solid #018b92;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
   width: 100%;
 }
 
