--- a/src/sass/_components.sass.scss
+++ b/src/sass/_components.sass.scss
@@ -436,7 +436,10 @@ margin-left: auto;
 	margin: auto;
 	width: 100%;
 	& hr {
-		border: 2px solid $blue-dark;
+		border: 4px solid $blue-dark;
+		border-left: none;
+		border-right: none;
+		border-bottom: none;
 		width: 100%
 	}
 	& h2 {
